--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "svg.js": "^2.7.1",
     "typescript": "3.6.3"
   },
   "scripts": {
