--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noImplicitThis": false
+    "noImplicitThis": false,
+    "noImplicitAny": false,
+    "strictNullChecks": false
   },
   "include": [
     "src"
