--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "analyze": "source-map-explorer build/static/js/*.* --html --in-source-map=uglify > stats.html",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
