--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
     "lottie-web": "^5.5.9",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -20,8 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "analyze": "source-map-explorer build/static/js/*.* --html --in-source-map=uglify > stats.html",
-    "predeploy": "npm run build",
+    "analyze": "source-map-explorer build/static/js/*.js --html stats.html",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -40,7 +35,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.1.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0"
   },
   "homepage": "https://rose-blue.github.io/rb.io"
 }
