--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^4.3.0",
     "svg.js": "^2.7.1",
     "typescript": "3.6.3"
   },
@@ -35,11 +36,12 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0"
+    "@types/react-dom": "16.9.0",
+    "@types/react-transition-group": "^4.2.3",
+    "gh-pages": "^2.1.1"
   },
   "homepage": "https://rose-blue.github.io/rb.io"
 }
